@@ -1,3 +1,6 @@
+11/23/2025:
+[+] Added Pizza Tower (Thanks for the suggestion BubbaNator5000 and Tanter!)
+
 11/22/2025:
 [+] Fixed Legend of Zelda: Ocarina of Time (Thanks for the bug reports James, colinisaweiner, and ThatOneAmerican)
 [+] Added Minesweeper (Thanks for the suggestion!)
