@@ -20,6 +20,9 @@ people who don't  have a clue  what they're doing and use ChatGPT to  "code"
 their infrastructure. No Name Games has and will stay on top of the competi-
 tion.
 ==================================CHANGELOG=================================
+11/23/2025:
+[+] Added Pizza Tower (Thanks for the suggestion BubbaNator5000 and Tanter!)
+
 11/22/2025:
 [+] Fixed Legend of Zelda: Ocarina of Time (Thanks for the bug reports
 James, colinisaweiner, and ThatOneAmerican)
